<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="27dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="19dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/logo" />
        <ImageView
            android:id="@+id/travel_bag"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/travel_bag" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/babyPowder"
            android:text="@string/title"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/babyPowder"
            android:text="@string/summary"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            >
            <Button
                android:id="@+id/button1"
                android:layout_width="25dp"
                android:layout_height="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/blackTrans"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="25dp"
                android:layout_height="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/whiteTrans"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="25dp"
                android:layout_height="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/blackTrans"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="25dp"
                android:layout_height="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/blackTrans"/>
            <Button
                android:id="@+id/button5"
                android:layout_width="25dp"
                android:layout_height="5dp"
                android:background="@color/blackTrans"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dip"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/regis"
            android:textSize="21dp"
            android:textColor="@color/white"
            android:background="@drawable/bordered_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyHaveAcc"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="13dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/whiteTrans90"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="13dp"
            android:text="@string/ver"
            android:textColor="@color/whiteTrans"/>
    </LinearLayout>

</LinearLayout>